# dfdx

./: Cargo.toml
src/: lib.rs
src/datasets/: cifar.rs  mnist.rs  mod.rs
src/tensor_ops/: impl_dropout.rs
