[package]
name = "dfdx"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Ergonomic auto differentiation in Rust, with pytorch like apis."
homepage = "https://github.com/coreylowman/dfdx"
documentation = "https://docs.rs/dfdx"
repository = "https://github.com/coreylowman/dfdx"
readme = "README.md"

keywords = [
    "deep-learning",
    "neural-network",
    "backprop",
    "tensor",
    "autodiff",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
matrixmultiply = "0.3.2"
num-traits = "0.2.15"
zip = "0.6.2"
cblas-sys = { version = "0.1.4", optional = true }
libc = { version = "0.2", optional = true }
curl = { version = "0.4.44", optional = true }
flate2 = { version = "1.0.24", optional = true }
indicatif = { version = "0.17.0", optional = true }
md5 = { version = "0.7.0", optional = true }
tar = { version = "0.4.38", optional = true }

[features]
default = ["datasets"]
nightly = []
datasets = ["dep:flate2", "dep:curl", "dep:indicatif", "dep:md5", "dep:tar"]
cblas = ["dep:cblas-sys", "dep:libc"]
mkl-static-iomp = ["cblas"]
mkl-static-seq = ["cblas"]
mkl-dynamic-iomp = ["cblas"]
mkl-dynamic-seq = ["cblas"]

[dev-dependencies]
tempfile = "3.3.0"
indicatif = "0.17.0"

[build-dependencies]
rustc_version = "0.4.0"